--- a/contacto.html
+++ b/contacto.html
@@ -100,7 +100,7 @@
 
 
 	<!-- Story Section -->
-	<section id="contacto" class="">
+	<section id="contacto" class="pt-5 pb-5">
 		<div class="blur"></div>
 
 		<div class="row">
