--- a/index.html
+++ b/index.html
@@ -76,8 +76,15 @@
 
 		<div class="video-holder">
 
-			<div id="video-wrap" class="video-player"
-				data-property="{videoURL:'https://youtu.be/GPmAOhJOZhY',containment:'.video-holder',autoPlay:true, mute:true, startAt:0, opacity:1}">
+			<div id="video-wrap" class="video-player" data-property="{videoURL:'https://youtu.be/GPmAOhJOZhY',containment:'.video-holder',autoPlay:true, mute:true, startAt:0, opacity:1}">
+
+				<video muted autoplay preload="auto" poster="./video/videoIMG-min2-min.png" width="100%" height="100%" loop>
+					<source src="./video/video.mp4" type="video/mp4" />
+					<!-- <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm" type="video/webm" />
+					<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv" type="video/ogg" /> -->
+					Tu navegador no soporta HTML5 Video
+				</video>
+
 			</div>
 
 		</div>
@@ -124,10 +131,10 @@
 
 			<!-- Portfolio Images -->
 			<div class="row grid x justify-content-center">
-				<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition"
+				<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition"
 					data-category="transition">
 					<div class="item opc" >
-						<a href="img/init/portafolio/FP9.jpg">
+						<a href="./aflordepiel.html">
 							<div class="thumbnail-overlay">
 								<img class="img-fluid" src="img/init/portafolio/FP9.jpg" alt="">
 								<span class="thumbnail-title">
@@ -138,10 +145,10 @@
 						</a>
 					</div>
 				</div>
-				<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 wedding transition"
+				<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 wedding transition"
 					data-category="transition">
 					<div class="item opc">
-						<a href="img/init/portafolio/JA13.jpg">
+						<a href="./jasmin.html">
 							<div class="thumbnail-overlay">
 								<img class="img-fluid" src="img/init/portafolio/JA13.jpg" alt="">
 								<span class="thumbnail-title">
@@ -152,10 +159,10 @@
 						</a>
 					</div>
 				</div>
-				<div class="grid-item popup-gallery col-lg-4 col-md-4 col-sm-12 party transition"
+				<div class="grid-item popup-gallery1 col-lg-4 col-md-4 col-sm-12 party transition"
 					data-category="transition">
 					<div class="item opc">
-						<a href="img/init/portafolio/MG10.jpg">
+						<a href="./magma.html">
 							<div class="thumbnail-overlay">
 								<img class="img-fluid" src="img/init/portafolio/MG10.jpg" alt="">
 								<span class="thumbnail-title">
@@ -173,9 +180,9 @@
 				<div class="col-12 col-md-10 m-auto text-center">
 					<div class="row grid x">
 
-						<div class="grid-item popup-gallery col-md-6 col-sm-12 wedding transition" data-category="transition">
+						<div class="grid-item popup-gallery1 col-md-6 col-sm-12 wedding transition" data-category="transition">
 							<div class="item opc">
-								<a href="img/init/portafolio/SP10.jpg">
+								<a href="./sanpedro.html">
 									<div class="thumbnail-overlay">
 										<img class="img-fluid" src="img/init/portafolio/SP10.jpg" alt="">
 										<span class="thumbnail-title">
@@ -186,9 +193,9 @@
 								</a>
 							</div>
 						</div>
-						<div class="grid-item popup-gallery col-md-6 col-sm-12 wedding transition" data-category="transition">
+						<div class="grid-item popup-gallery1 col-md-6 col-sm-12 wedding transition" data-category="transition">
 							<div class="item opc">
-								<a href="img/init/portafolio/UKU1.jpg">
+								<a href="./ukukus.html">
 									<div class="thumbnail-overlay">
 										<img class="img-fluid" src="img/init/portafolio/UKU1.jpg" alt="">
 										<span class="thumbnail-title">
