suvir video y Tags

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 	<!-- Basic -->
 	<meta charset="utf-8">
-	<meta name="keywords" content="HTML5 Template" />
-	<meta name="description" content="Arlin - Responsive HTML5 Wedding Template">
+	<meta name="keywords" content="fashion designer womens clothes fashion designer fashion show fashion style fashion model fashion dresses women fashion" />
+	<meta name="description" content="GLENY CASTRO - Nació en Arequipa, desde muy pequeña mostró su pasión por las telas, sus texturas y la moda; estudió diseño en el Centro de Altos Estudios de la Moda CEAM en Lima, presentándose al concurso “Jóvenes Creadores al Mundo” en Lima quedando entre los cinco finalista para luego ir a Paris representando al Perú en el concurso “XIX Jeunes Creatures de Mode” que tuvo como escenario el Carrousel du Louvre,  logrando el premio mundial y por este gran premio recibe una beca para estudiar en la prestigiosa ECOLE DE LA CHAMBRE SYNDICALE DE LA COUTURE PARISIENNE, durante sus estudios realiza su stage profesional y trabaja con el famoso diseñador francés de Alta Costura FRANCK SORBIER. Luego de esta increíble experiencia regresa al Perú y se presenta al concurso “CREADORES DE AMBOS MUNDOS” 2005 organizado por PromPerú, en el cual queda ganadora por segunda vez y recibe otra beca para realizar una pasantía en la famosa Escuela ESMOD en Berlín, Alemania. En los últimos años ha sido galardonada con los premios International Bussiness Awards 2013, Mujer de Oro líder por Excelencia 2012, nominada como LEYENDA Talentos que Inspiran 2012 – Categoría Arte por la Cerveza Cusqueña, es reconocida por la prensa nacional como “La Dama de la Alpaca” e internacionalmente sus creaciones son reconocidas por la prensa.">
 	<meta name="author" content="regediter.com">
 
 	<!-- Page Title -->
@@ -79,7 +79,7 @@
 			<div id="video-wrap" class="video-player" data-property="{videoURL:'https://youtu.be/GPmAOhJOZhY',containment:'.video-holder',autoPlay:true, mute:true, startAt:0, opacity:1}">
 
 				<video muted autoplay preload="auto" poster="./video/videoIMG-min2-min.png" width="100%" height="100%" loop>
-					<source src="./video/video.mp4" type="video/mp4" />
+					<source src="./video/gleny_castro.mp4" type="video/mp4" />
 					<!-- <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm" type="video/webm" />
 					<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv" type="video/ogg" /> -->
 					Tu navegador no soporta HTML5 Video
