--- a/general.html
+++ b/general.html
@@ -90,7 +90,7 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h3 class="mt-5 mb-2">
-						GALERIA
+						GALERÍA
 					</h3>
 					<!-- <p class="text-uppercase mb-4">Colección inspirada en culturas orientales, tomando principalmente la cultura china.</p> -->
 				</div>
