--- a/colecciones.html
+++ b/colecciones.html
@@ -175,7 +175,7 @@
 								<div class="thumbnail-overlay">
 									<img class="img-fluid" src="img/coleccion/otros.jpg" alt="">
 									<span class="thumbnail-title">
-										<h3 class="text-uppercase peso-200 text-white shadow_sp">GALERIA</h3>
+										<h3 class="text-uppercase peso-200 text-white shadow_sp">GALERÍA</h3>
 										<div class="logo_colecction"></div>
 									</span>
 								</div>
